<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/notif" >
        <CheckBoxPreference
            android:key="TransportsBordeaux_notifUpdate"
            android:title="@string/notifUpdateOn"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme" >
        <ListPreference
            android:dialogTitle="@string/chooseTheme"
            android:entries="@array/listeTheme"
            android:entryValues="@array/listeThemeValues"
            android:key="TransportsBordeaux_choixTheme"
            android:title="@string/chooseTheme"
            android:defaultValue="BLANC" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/debug">
    	<CheckBoxPreference
            android:key="TransportsBordeaux_debug"
            android:title="@string/activateDebug"
            android:defaultValue="false"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/dbOnSdCard">
        <CheckBoxPreference 
            android:key="TransportsBordeaux_sdCard"
            android:title="@string/dbOnSdCard"
            android:defaultValue="false"
            />
    </PreferenceCategory>

</PreferenceScreen>