<?xml version="1.0" encoding="utf-8"?>
<!--
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
      ybonnel - initial API and implementation
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="50dip">

		<TableRow android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:layout_weight="1">
			<Button android:id="@+id/home_btn_bus" style="@style/HomeButton"
				android:text="@string/btn_bus" android:drawableTop="@drawable/home_btn_bus" />
			<Button android:id="@+id/home_btn_bus_favori" style="@style/HomeButton"
				android:text="@string/btn_bus_favori" android:drawableTop="@drawable/home_btn_bus_favori" />
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1">
			<Button android:drawableTop="@drawable/home_btn_bus_gps" style="@style/HomeButton" android:id="@+id/home_btn_bus_gps" android:text="@string/btn_bus_gps"></Button>
			<Button android:drawableTop="@drawable/home_btn_itineraire" style="@style/HomeButton" android:id="@+id/home_btn_itineraire" android:text="@string/btn_itineraires"></Button>
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1">
			<Button android:drawableTop="@drawable/home_btn_velo" style="@style/HomeButton" android:id="@+id/home_btn_velo" android:text="@string/btn_velo"></Button>
			<Button android:drawableTop="@drawable/home_btn_velo_favori" style="@style/HomeButton" android:id="@+id/home_btn_velo_favori" android:text="@string/btn_velo_favori"></Button>
		</TableRow>

	</TableLayout>
	<com.google.ads.AdView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/adView" android:layout_width="fill_parent"
		android:layout_height="wrap_content" ads:adUnitId="a14dd0387e93eb2"
		ads:adSize="BANNER" android:layout_gravity="bottom"  />

</FrameLayout>
